# for display continuity sake please use 2 spaces instead of tabs

2013-04-15 mmichaud <michael.michaud@free.fr>
  * Fix bug appeared with recent jre (between 1.7.0_07 and 1.7.0_17) and 
    preventing error messages to be displayed (reported by Uwe on 2013-04-15)

2013-04-15 mmichaud <michael.michaud@free.fr>
  * Fix the new ZoomToWMSLayerPlugIn (multiselection case did not work properly)
  * Fix encoding problem in AbstractWMSParser

2013-04-14 mmichaud <michael.michaud@free.fr>
  * Improve WMS parser to include WMS 1.3.0 and replace the complex ZoomToWMS 
    plugin by a simple one.

********************************************************************************
* release of version 1.6.1
********************************************************************************

2013-04-11 ede
  * critical fix for Mac and Linux users
  
********************************************************************************
* release of version 1.6.0
********************************************************************************

2013-04-11 ede
  * bump  ISA Feature color chooser to 0.6
  * icons resized on toolbar
  * new icon for "Choose color option"
  * (ver 0.6) now menu is dispayed in two columns

2013-04-10 mmichaud <michael.michaud@free.fr>
  * bug 3610405 : CombineSelectedFeatures now return a GeometryCollection rather
    than a invalid MultiPolygon

2013-04-06 mmichaud <michael.michaud@free.fr>
  * update JumpPrinter PlugIn from 1.84 to 1.85 (bug fix)
  * small UI improvement in ConstraintsOptionsPanel
  
2013-04-05  Giuseppe Aruta (giuseppe_aruta@yahoo.it)
  * Add icons to Style Layer Context Submenu, RasterColorEditor, SearchAllAttribute,
    SimpleQuery and SpatialQuery plugins

2013-04-04 mmichaud <michael.michaud@free.fr>
  * add Flatten3DGeometries.bsh BeanTool and improve beantools sorting

2013-04-03 mmichaud <michael.michaud@free.fr>
  * Sort the list of beantools for linux/mac users
  * bug 3608987 finally resolved
