@@ -1,6 +1,10 @@
 # for display continuity sake please use 2 spaces instead of tabs
 
-2013-04-15 mmichaud <michael.michaud@free.fr>
+2013-04-19 mmichaud <michael.michaud@free.fr>
+  * Change directory from lib/ext/etc to lib/native for MrSID executable
+    see https://sourceforge.net/apps/mediawiki/jump-pilot/index.php?title=MrSID
+  
+2013-04-18 mmichaud <michael.michaud@free.fr>
   * Fix bug appeared with recent jre (between 1.7.0_07 and 1.7.0_17) and 
     preventing error messages to be displayed (reported by Uwe on 2013-04-15)
 
